[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/big gun.glb" type="PackedScene" id=1]
[ext_resource path="res://Scripts/GunItem.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/laserShoot.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sounds/Hit Marker.wav" type="AudioStream" id=4]

[node name="Big Gun" type="Spatial"]
script = ExtResource( 2 )
item_name = "Big Gun"
damage = 90
fire_rate = 1

[node name="big gun" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )

[node name="Tip" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.238 )

[node name="FireTimer" type="Timer" parent="."]
one_shot = true

[node name="FireSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
